<resources>
    <string name="app_name">Segundo_Ejercicio</string>
    <string name="bienvenidos">BIENVENIDOS!</string>
    <string name="imagen_de_inicio">Imagen de inicio</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tel_fono">Teléfono</string>
    <string name="edad">Edad</string>
    <string name="email">Email</string>
    <string name="ingrese_su_tel_fono">Ingrese su teléfono</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_apellido">Ingrese su apellido</string>
    <string name="ingrese_su_edad">Ingrese su edad</string>
    <string name="ingrese_su_email">Ingrese su Email</string>
    <string name="ingreso">Ingreso</string>
    <string name="textview">TextView</string>
    <string name="nombre1">Nombre: No disponible</string>
    <string name="apellido1">Apellido: No disponible</string>
    <string name="tel_fono1">Teléfono: No disponible</string>
    <string name="edad1">Edad: No disponible</string>
    <string name="email1">Email: No disponible</string>

    <string-array name = "spinner_Departamentos">
        <item>Guatemala</item>
        <item>Quetzaltengango</item>
        <item>Sacatepequez</item>
<<<<<<< HEAD
        </string-array>


    <string name="api_error_response">Error en la respuesta de la API</string>
    <string name="api_error_failure">Error al consumir la API</string>
    <string name="error_message">Error: %1$s</string>
    <string name="please_fill_all_fields">Por favor, llena todos los campos</string>
    <string name="welcome_message">Bienvenido!</string>
</resources>

=======
    </string-array>
</resources>
>>>>>>> 88571e7662ade8cf6280261044f295dcc206ef7a
